# thehotpotspot

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION.md  ARCHITECTURE_INTEGRITY_ANALYSIS.md  BACKUP_PLANS.md  BLOCKCHAIN_ARCHITECTURE_RECOMMENDATIONS.md  BLOCKCHAIN_STATUS_REPORT.md  BUSINESS_LOGIC_ANALYSIS.md  CHANGELOG.md  CHAT_HISTORY.md  CONTROL_PACKAGE_ANALYSIS.md  CURRENCY_OPTIMIZATION_REPORT.md  Cargo.toml  DEPLOYMENT_AND_TESTING_PLAN.md  DEPLOYMENT_README.md  DETAILED_PRINCIPLES_ANALYSIS.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PRINCIPLES_ANALYSIS.md  DEVOPS_GUIDE.md  DOCKER_SETUP_INSTRUCTIONS.md  Dockerfile  FINAL_DEPLOYMENT_REPORT.md  FINAL_PROJECT_REPORT.md  FINAL_TESTING_AND_DEPLOYMENT_REPORT.md  FINAL_UPDATE_REPORT.md  FRONTEND_BACKEND_INTEGRATION_REPORT.md  FRONTEND_TYPESCRIPT_REPORT.md  GITHUB_ACTIONS_FIX_TZ.md  GITHUB_UPLOAD_REPORT.md  GMAIL_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_REPORT.md  LAUNCH_STATUS_REPORT.md  MOBILE_APP_INSTALLATION_GUIDE.md  NEW_TOKENOMICS_README.md  NEW_TOKEN_DISTRIBUTION_REPORT.md  OPTIMIZATION_PLAN.md  PIXEL_ROYAL_DESIGN_REPORT.md  PLAN_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_PLAN.md  (+66 more)
.github/: dependabot.yml
benches/: load_tests.rs
contracts/: FranchiseToken.sol  README.md
examples/: anonymous_wallets_demo.rs  check_api_demo.rs  cost_tracking_demo.rs  governance_dao_demo.rs  new_tokenomics_demo.rs  security_checks_demo.rs  simple_tokenomics_demo.rs  transparency_demo.rs  video_streaming_demo.rs  video_streaming_server.rs  viewer_arm_demo.rs
frontend/: .eslintrc.json  Dockerfile  README.md  deploy-railway.bat  deploy-railway.sh  franchise.html  index.html  nginx.conf  owner.html  package.json  tablet.html  transparency.html  tsconfig.json  video.html  vite.config.ts
migrations/: 001_new_tokenomics_tables.sql
mobile_app/: App.tsx  MOBILE_APP_REPORT.md  README.md  package.json
mobile_apps/: FoodTruckNetwork.apk  FoodTruckNetwork.ipa  README.md
scripts/: check_postgresql.ps1  check_postgresql_simple.ps1  run_tests_with_db.ps1  run_tests_with_db.sh
src/: anonymous_wallets.rs  api_versioning.rs  check_api.rs  check_generation.rs  chef_arm.rs  config.rs  consensus.rs  cost_tracking.rs  customer_streaming_arm.rs  database.rs  enhanced_streaming_manager.rs  (+34 more)
(+74 files in other folders)
