[package]
name = "blockchain_project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "simple_web_server"
path = "src/bin/simple_web_server.rs"

[dependencies]
sha2 = "0.10"
fastrand = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
qrcode = "0.13"
