[package]
name = "blockchain_project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "simple_web_server"
path = "src/bin/simple_web_server.rs"

[dependencies]
sha2 = "0.10"
fastrand = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
thiserror = "1.0"
tokio-postgres = "0.7"

[dev-dependencies]
qrcode = "0.13"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
mockall = "0.12"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
testcontainers = "0.15"
